Commit by Keshav Savita 01-09-2022

--- a/app/src/main/res/layout/activity_yes.xml
+++ b/app/src/main/res/layout/activity_yes.xml
@@ -7,7 +7,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/bg_color"
         >
 
         <RelativeLayout
@@ -180,7 +181,7 @@
 
                         <LinearLayout
                             android:id="@+id/llgiPurple"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_marginLeft="@dimen/_20sdp"
@@ -189,7 +190,7 @@
 
                             <TextView
                                 android:id="@+id/txtGrpName"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins_semibold"
                                 android:text="To Group Friends      "
@@ -221,6 +222,21 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/tvVioletNotFound"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_30sdp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
+                        android:text="No Data."
+                        android:visibility="gone"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12sdp" />
+
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
@@ -831,6 +847,7 @@
                     android:layout_height="wrap_content"
                     >
 
+
                     <LinearLayout
                         android:id="@+id/imgblue1"
                         android:layout_width="wrap_content"
@@ -869,14 +886,14 @@
                             android:layout_marginLeft="@dimen/_20sdp"
                             android:layout_centerInParent="true"
                             android:orientation="vertical"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             >
 
                             <TextView
                                 android:id="@+id/tvUserName"
                                 android:fontFamily="@font/poppins_semibold"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="John SMith"
                                 android:textColor="@color/black"
@@ -885,7 +902,7 @@
                             <TextView
                                 android:id="@+id/tvComment"
                                 android:fontFamily="@font/poppins_semibold"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="EL Sol, Madraid, Spain"
                                 android:textColor="@color/black"
@@ -894,7 +911,7 @@
                             <TextView
                                 android:id="@+id/tvDate"
                                 android:fontFamily="@font/poppins_semibold"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="19-11-2021"
                                 android:textColor="@color/black"
@@ -905,6 +922,20 @@
                         </LinearLayout>
 
                     </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/tvBlueNotFound"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_30sdp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
+                        android:text="No Data."
+                        android:visibility="gone"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12sdp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
@@ -1198,6 +1229,7 @@
 
 
                 <ImageView
+                    android:id="@+id/ivFolder"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginLeft="@dimen/_22sdp"
                     android:scaleType="fitXY"
@@ -1209,6 +1241,7 @@
                 </ImageView>
 
                 <TextView
+                    android:id="@+id/tvFolder"
                     android:layout_gravity="center"
                     android:fontFamily="@font/poppins_semibold"
                     android:layout_width="wrap_content"
@@ -1219,6 +1252,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/llFolder"
                     android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_width="match_parent"
