--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -33,6 +33,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/rlMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_20sdp"
@@ -190,11 +191,13 @@
 
 
         <LinearLayout
+            android:id="@+id/llOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_10sdp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
 
             <ImageView
@@ -219,6 +222,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/poppins_semibold"
             android:text="ALL WORLD"
+            android:visibility="gone"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp" />
 
@@ -227,7 +231,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="-15dp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:layout_marginEnd="-15dp"
             android:scaleType="fitXY"
             android:src="@drawable/green_line" />
