--- a/app/src/main/res/layout/item_yes_post_purple.xml
+++ b/app/src/main/res/layout/item_yes_post_purple.xml
@@ -9,7 +9,6 @@
     >
 
     <LinearLayout
-        android:layout_toRightOf="@+id/img2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -30,14 +29,14 @@
             android:layout_centerInParent="true"
             android:layout_toRightOf="@+id/img3"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
 
             <TextView
                 android:id="@+id/txtPurple"
                 android:fontFamily="@font/poppins_semibold"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="To Group Friends      "
                 android:textColor="@color/black"
