--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -16,40 +16,33 @@
         android:layout_height="@dimen/_50sdp"
         >
 
-        <ImageView
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_alignParentLeft="true"
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgLeftMenu1"
             android:layout_width="@dimen/_45sdp"
             android:layout_height="@dimen/_45sdp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/user"
-            />
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:src="@drawable/user" />
 
-        <RelativeLayout
-            android:background="@drawable/border_btn_yellow"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+
 
             <TextView
+                android:background="@drawable/border_btn_yellow"
+                android:layout_alignParentRight="true"
                 android:id="@+id/txtCount"
-                android:textColor="@color/white"
-                android:textStyle="bold"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_alignParentTop="true"
+                android:layout_height="@dimen/_20sdp"
                 android:padding="@dimen/_5sdp"
-                android:textSize="@dimen/_10sdp"
                 android:text="0"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_9sdp"
+                android:textStyle="bold">
 
             </TextView>
 
-        </RelativeLayout>
 
     </RelativeLayout>
 
